--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 logging.level.org.springframework=ERROR
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/dosada
-spring.datasource.username=postgres
-spring.datasource.password=dell2020
+spring.datasource.url=jdbc:postgresql:
+spring.datasource.username=
+spring.datasource.password=
 #spring.datasource.url=jdbc:postgresql://10.110.0.3/ig_app2
 #spring.datasource.username=ig_app2
 #spring.datasource.password=WKrXHKM75l
