--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,44 @@
 
-logging.level.org.springframework=ERROR
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql:
-spring.datasource.username=
-spring.datasource.password=
-#spring.datasource.url=jdbc:postgresql://10.110.0.3/ig_app2
-#spring.datasource.username=ig_app2
-#spring.datasource.password=WKrXHKM75l
 spring.datasource.hikari.schema=public
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=update
 
 
+#Logger__
+logging.level.org.springframework=ERROR
+#za paket
+#logging.level.com.example.demo= TRACE
+#za cilu aplikaciju
+#logging.level.root=DEBUG
+#za novi dokument o logovima
+logging.pattern.console=%d [%level] %c{1.} {%t} %m%n
+logging.file.name= appLog.log
+logging.pattern.file=%d [%level] %c{1.} {%t} %m%n
 
+
+
+
+#Port__
 server.port=1175
+
+
+#Lokalno__
+spring.datasource.url=jdbc:postgresql://localhost:5432/dosada
+spring.datasource.username=postgres
+spring.datasource.password=dell2020
+
+
+#Server__
+#spring.datasource.url=jdbc:postgresql://10.110.0.3/ig_app2
+#spring.datasource.username=ig_app2
+#spring.datasource.password=WKrXHKM75l
+
+#Eror__
+server.error.include-message=always
+server.error.include-exception=true
+
+#Swagger ako neces u POM
+#springdoc.api-docs.path=/api-docs
+#springdoc.swagger-ui.path=/swagger-ui-hnb.html
